--- a/mainMenuProperties.html
+++ b/mainMenuProperties.html
@@ -15,7 +15,7 @@
   <ul>
     <li><a href="mainMenuProfile.html">Profile</a></li>
     <li><a href="mainMenuProperties.html">Properties</a></li>
-    <li><a href="#">Logout</a></li>
+    <li><a href="index.html">Logout</a></li>
   </ul>
 </div>
 
