--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
   <form action="" id="form-login">
-    <h2>Login Form</h2>
+    <h2 style="color: #00cc00">Login Form</h2>
     <div>
       <div class="container">
         <label for="username" style="color:#00cc00"><b>Username (email)</b></label>
@@ -25,7 +25,7 @@
       <div class="container">
         <div class="buttonHolder">
           <button type="submit" onclick="window.location.href='mainMenuProperties.html'">Login</button>
-          <button type="button" onclick="window.location.href='register.html'">Register</button>
+          <button type="submit" onclick="window.location.href='register.html'">Register</button>
         </div>
       </div>
 
