--- a/register.html
+++ b/register.html
@@ -10,7 +10,7 @@
 
 <body>
   <form action="" id="form-login">
-    <h2>Register Form</h2>
+    <h2 style="color:#00cc00">Register Form</h2>
     <div>
       <div class="container required">
         <label for="login" style="color:#00cc00"><b>Login</b></label>
@@ -33,7 +33,7 @@
       </div>
 
       <div class="buttonAndText">
-        <button type="submit">Register</button>
+        <button type="button" onclick="window.location.href='index.html'">Register</button>
         <label>Have an account? <a href="index.html">login</a></label>
       </div>
 
