--- a/mainMenuProperties.html
+++ b/mainMenuProperties.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <div>
-  <h2 style="text-align: center">E-services for House Management - <label style="color:green"> Properties</label></h2>
+  <h2 style="text-align: center">E-services for House Management - <label style="color:00cc00"> Properties</label></h2>
 </div>
 
 <div class="menu_simple">
