--- a/mainMenuProfile.html
+++ b/mainMenuProfile.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <div>
-  <h2 style="text-align: center">E-services for House Management - Profile</label></h2>
+  <h1 style="text-align: center">E-services for House Management - Profile</label></h1>
 </div>
 
 <div class="menu_simple">
@@ -20,16 +20,13 @@
 </div>
 
 <div class="content">
-  <h2 style="text-align: center">Login</h2>
+  <h2 style="margin-bottom: 1px;">Login</h2>
   <input type="text" placeholder="Read Only" name="login" readonly>
+</div>
 
-  <h2 style="text-align: center">Name</h2>
-  <input type="text" placeholder="Name" name="Name">
 
-  <div class="buttonStyle">
-    <button type="submit">Save</button>
-  </div>
-
+<div class="content" style="margin-top: 10px">
+  <button type="submit">Save</button>
 </div>
 
 </body>
