edited background color

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
   <form action="" id="form-login">
-    <h2 style="color: #00cc00">Login Form</h2>
+    <h2 style="color: black">Login Form</h2>
     <div>
       <div class="container">
         <label for="username" style="color:#00cc00"><b>Username (email)</b></label>
