--- a/register.html
+++ b/register.html
@@ -10,31 +10,31 @@
 
 <body>
   <form action="" id="form-login">
-    <h2 style="color:#00cc00">Register Form</h2>
+    <h2>Register Form</h2>
     <div>
       <div class="container required">
-        <label for="login" style="color:#00cc00"><b>Login</b></label>
+        <label for="login"><b>Login</b></label>
         <input type="text" placeholder="Enter Login" name="login">
       </div>
 
       <div class="container required">
-        <label for="password" style="color:#00cc00"><b>Password</b></label>
+        <label for="password"><b>Password</b></label>
         <input type="password" placeholder="Enter Password" name="password">
       </div>
 
       <div class="container required">
-        <label for="repeatPassword" style="color:#00cc00"><b>Repeat Password</b></label>
+        <label for="repeatPassword"><b>Repeat Password</b></label>
         <input type="password" placeholder="Repeat Password" name="repeatPassword">
       </div>
 
       <div class="container">
-        <label for="name" style="color:#00cc00"><b>Name</b></label>
+        <label for="name"><b>Name</b></label>
         <input type="text" placeholder="Enter Name" name="name">
       </div>
 
       <div class="buttonAndText">
         <button type="button" onclick="window.location.href='index.html'">Register</button>
-        <label>Have an account? <a href="index.html">login</a></label>
+        <label>Have an account? <a href="index.html"><label id="label-link">login</label></a></label>
       </div>
 
     </div>
