--- a/index.html
+++ b/index.html
@@ -10,15 +10,15 @@
 
 <body>
   <form action="" id="form-login">
-    <h2 style="color: black">Login Form</h2>
+    <h2>Login Form</h2>
     <div>
       <div class="container">
-        <label for="username" style="color:#00cc00"><b>Username (email)</b></label>
+        <label for="username"><b>Username (email)</b></label>
         <input type="text" placeholder="Enter Username" name="username" required>
       </div>
 
       <div class="container">
-        <label for="password" style="color:#00cc00"><b>Password</b></label>
+        <label for="password"><b>Password</b></label>
         <input type="password" placeholder="Enter Password" name="password" required>
       </div>
 
