--- a/mainMenuProperties.html
+++ b/mainMenuProperties.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <div>
-  <h1 style="text-align: center">E-services for House Management - <label style="color:00cc00"> Properties</label></h1>
+  <h1>E-services for House Management - <label > Properties</label></h1>
 </div>
 
 <div class="menu_simple">
