--- a/mainMenuProfile.html
+++ b/mainMenuProfile.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <div>
-  <h1 style="text-align: center">E-services for House Management - Profile</label></h1>
+  <h1>E-services for House Management - Profile</h1>
 </div>
 
 <div class="menu_simple">
@@ -20,10 +20,14 @@
 </div>
 
 <div class="content">
-  <h2 style="margin-bottom: 1px;">Login</h2>
+  <h2>Login</h2>
   <input type="text" placeholder="Read Only" name="login" readonly>
 </div>
 
+<div class="content">
+  <h2>Name</h2>
+  <input type="text" placeholder="Name" name="name" maxlength="255">
+</div>
 
 <div class="content" style="margin-top: 10px">
   <button type="submit">Save</button>
