--- a/index.html
+++ b/index.html
@@ -6,31 +6,40 @@
   <meta charset="UTF-8">
   <title>E-services for House Management - Login</title>
   <link rel="stylesheet" href="css/style.css">
+
+  <script type="text/javascript">
+      function readInputValues(event) {
+          event.preventDefault();
+          var user = document.getElementById("username1");
+          var pass = document.getElementById("password1");
+          console.log('Username - ' + user.value + ' , Password - ' + pass.value);
+          window.location.href='mainMenuProperties.html';
+      }
+  </script>
 </head>
 
 <body>
-  <form action="" id="form-login">
-    <h2>Login Form</h2>
-    <div>
-      <div class="container">
-        <label for="username"><b>Username (email)</b></label>
-        <input type="text" placeholder="Enter Username" name="username" required>
-      </div>
-
-      <div class="container">
-        <label for="password"><b>Password</b></label>
-        <input type="password" placeholder="Enter Password" name="password" required>
-      </div>
-
-      <div class="container">
-        <div class="buttonHolder">
-          <button type="submit" onclick="window.location.href='mainMenuProperties.html'">Login</button>
-          <button type="submit" onclick="window.location.href='register.html'">Register</button>
-        </div>
-      </div>
-
+<form action="" id="form-login" onsubmit="readInputValues(event)">
+  <h2>Login Form</h2>
+  <div>
+    <div class="container">
+      <label><b>Username (email)</b></label>
+      <input type="text" id="username1" placeholder="Enter Username" name="username" required>
     </div>
-  </form>
+
+    <div class="container">
+      <label><b>Password</b></label>
+      <input type="password" id="password1" placeholder="Enter Password" name="password" required>
+    </div>
+
+    <div class="container">
+      <div class="buttonHolder">
+        <button type="submit">Login</button>
+        <button type="submit" onclick="window.location.href='register.html'">Register</button>
+      </div>
+    </div>
+  </div>
+</form>
 
 </body>
 
