--- a/mainMenuProfile.html
+++ b/mainMenuProfile.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <div>
-  <h1>E-services for House Management - Profile</h1>
+  <h1>E-services for House Management - <label>Profile</label></h1>
 </div>
 
 <div class="menu_simple">
