--- a/index.html
+++ b/index.html
@@ -24,12 +24,12 @@
   <div>
     <div class="container">
       <label><b>Username (email)</b></label>
-      <input type="text" id="username1" placeholder="Enter Username" name="username" required>
+      <input type="text" id="username1" placeholder="Enter Username" name="username" autocomplete="username" required>
     </div>
 
     <div class="container">
       <label><b>Password</b></label>
-      <input type="password" id="password1" placeholder="Enter Password" name="password" required>
+      <input type="password" id="password1" placeholder="Enter Password" name="password"  autocomplete="password" required>
     </div>
 
     <div class="container">
