autocomplete added to register.html

--- a/register.html
+++ b/register.html
@@ -14,22 +14,22 @@
   <div>
     <div class="container required">
       <label for="login"><b>Login</b></label>
-      <input type="text" placeholder="Enter Login" name="login">
+      <input type="text" autocomplete="login" placeholder="Enter Login" name="login">
     </div>
 
     <div class="container required">
       <label for="password"><b>Password</b></label>
-      <input type="password" placeholder="Enter Password" name="password">
+      <input type="password" autocomplete="password" placeholder="Enter Password" name="password">
     </div>
 
     <div class="container required">
       <label for="repeatPassword"><b>Repeat Password</b></label>
-      <input type="password" placeholder="Repeat Password" name="repeatPassword">
+      <input type="password" autocomplete="passwordrepeat" placeholder="Repeat Password" name="repeatPassword">
     </div>
 
     <div class="container">
       <label for="name"><b>Name</b></label>
-      <input type="text" placeholder="Enter Name" name="name">
+      <input type="text" autocomplete="name" placeholder="Enter Name" name="name">
     </div>
 
     <div class="buttonAndText">
