--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
   <script type="text/javascript">
       function readInputValues(event) {
           event.preventDefault();
-          var user = document.getElementById("username1");
-          var pass = document.getElementById("password1");
+          let user = document.getElementById("username1");
+          let pass = document.getElementById("password1");
           console.log('Username - ' + user.value + ' , Password - ' + pass.value);
           window.location.href='mainMenuProperties.html';
       }
@@ -19,27 +19,13 @@
 </head>
 
 <body>
-<form action="" id="form-login" onsubmit="readInputValues(event)">
-  <h2>Login Form</h2>
-  <div>
-    <div class="container">
-      <label><b>Username (email)</b></label>
-      <input type="text" id="username1" placeholder="Enter Username" name="username" autocomplete="username" required>
-    </div>
 
-    <div class="container">
-      <label><b>Password</b></label>
-      <input type="password" id="password1" placeholder="Enter Password" name="password"  autocomplete="password" required>
-    </div>
+  
+ <form id="mainForm">
+   <p>Some text</p>
 
-    <div class="container">
-      <div class="buttonHolder">
-        <button type="submit">Login</button>
-        <button type="submit" onclick="window.location.href='register.html'">Register</button>
-      </div>
-    </div>
-  </div>
-</form>
+ </form>
+
 
 </body>
 
