--- a/index.html
+++ b/index.html
@@ -13,18 +13,35 @@
           let user = document.getElementById("username1");
           let pass = document.getElementById("password1");
           console.log('Username - ' + user.value + ' , Password - ' + pass.value);
-          window.location.href='mainMenuProperties.html';
+          window.location.href = 'mainMenuProperties.html';
       }
   </script>
 </head>
 
 <body>
 
-  
- <form id="mainForm">
-   <p>Some text</p>
 
- </form>
+<form id="mainForm">
+  <div id="innerForm">
+    <h3 id="welcomeText">Welcome</h3>
+
+    <div>
+      <label id="labelText">username</label>
+      <input type="text" id="username1" name="username" autocomplete="username" required>
+    </div>
+
+    <div style="padding-top: 10px">
+      <label id="labelText">password</label>
+      <input type="text" id="username1" name="username" autocomplete="username" required>
+    </div>
+
+    <div style="padding-top: 10px">
+      <button type="submit">Login</button>
+    </div>
+
+  </div>
+
+</form>
 
 
 </body>
