--- a/index.html
+++ b/index.html
@@ -11,25 +11,25 @@
 </head>
 
 <body>
-<form id="mainForm">
-  <div id="innerForm">
-    <h3 id="welcomeText">Welcome</h3>
+<form class="mainForm">
+  <div class="innerForm">
+    <h3 class="welcomeText">Welcome</h3>
 
     <div>
       <label id="usernameLabel">username</label>
       <input type="text" id="usernameInput" name="username" autocomplete="username" required>
     </div>
 
-    <div id="divPadding">
+    <div class="labelDesign">
       <label id="passwordText">password</label>
       <input type="text" id="passwordInput" name="password" autocomplete="password" required>
     </div>
 
-    <div id="divPadding">
+    <div class="labelDesign">
       <button type="submit"><b>Login</b></button>
     </div>
 
-    <div id="divPadding">
+    <div class="labelDesign">
       <label id="registerLink"><a href="#">Register</a></label>
     </div>
   </div>
