fixed validator's warnings

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta charset="UTF-8">
   <title>E-services for House Management - Login</title>
   <link rel="stylesheet" href="css/style.css">
-  <script type="text/javascript" src="/scripts/login.js"></script>
+  <script src="/scripts/login.js"></script>
 
 </head>
 
@@ -17,12 +17,12 @@
 
     <div>
       <label id="usernameLabel">username</label>
-      <input type="text" id="usernameInput" name="username" autocomplete="username" required>
+      <input type="text" id="usernameInput" name="username" autocomplete="usernameInput" required>
     </div>
 
     <div class="labelDesign">
       <label id="passwordText">password</label>
-      <input type="text" id="passwordInput" name="password" autocomplete="password" required>
+      <input type="text" id="passwordInput" name="password" autocomplete="passwordInput" required>
     </div>
 
     <div class="labelDesign">
