--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
 
     <div>
       <label id="usernameLabel">username</label>
-      <input type="text" id="usernameInput" name="username" autocomplete="usernameInput" required>
+      <input type="text" id="usernameInput" name="username" autocomplete="on" required>
     </div>
 
     <div class="labelDesign">
       <label id="passwordText">password</label>
-      <input type="text" id="passwordInput" name="password" autocomplete="passwordInput" required>
+      <input type="text" id="passwordInput" name="password" autocomplete="on" required>
     </div>
 
     <div class="labelDesign">
