Register form page

--- a/register.html
+++ b/register.html
@@ -16,16 +16,38 @@
         <label>Register Form</label>
       </div>
       
-      <div>
-        <label class="usernameLabel">Login</label>
+      <div >
+        <label class="usernameLabel required">Login</label>
         <input type="text" id="usernameInput" name="username" autocomplete="on" required>
       </div>
-  
-  
-      <div class="loginDesignButton">
-        <button type="submit"><span class="loginDesignText">Register</span></button>
+
+      <div>
+        <label class="usernameLabel required">Password</label>
+        <input type="text" id="usernameInput" name="username" autocomplete="on" required>
       </div>
-    
+
+      <div>
+        <label class="usernameLabel required">Password</label>
+        <input type="text" id="usernameInput" name="username" autocomplete="on" required>
+      </div>
+
+      <div>
+        <label class="usernameLabel required">Repeat Password</label>
+        <input type="text" id="usernameInput" name="username" autocomplete="on" required>
+      </div>
+
+      <div>
+        <label class="usernameLabel required">Name</label>
+        <input type="text" id="usernameInput" name="username" autocomplete="on" required>
+      </div>
+
+      <div>
+        <div >
+          <input type="button" class="buttonRegister" value="Register">
+          <label ><a href="#">Register</a></label>
+        </div>
+      </div>
+
       <div class="registerDesignStyle">
         <label class="registerDesignText"><a href="#">Register</a></label>
       </div>
