index and register design

--- a/index.html
+++ b/index.html
@@ -14,17 +14,17 @@
 <form class="mainForm">
   <div class="innerForm">
     
-    <div class="welcomeText">
+    <div class="headingText">
       <label>Welcome</label>
     </div>
   
     <div>
-      <label class="usernameLabel">username</label>
+      <label for="usernameInput" class="styleLabel">username</label>
       <input type="text" id="usernameInput" name="username" autocomplete="on" required>
     </div>
 
-    <div class="labelDesign">
-      <label id="passwordText">password</label>
+    <div class="styleLabel">
+      <label for="passwordInput">password</label>
       <input type="text" id="passwordInput" name="password" autocomplete="on" required>
     </div>
 
