--- a/index2.html
+++ b/index2.html
@@ -24,9 +24,9 @@
     }
 
     .popup {
-      width: 300px;
+      width: 226px;
       background: white;
-      padding: 30px 50px;
+      padding: 50px;
       box-shadow: 4px 4px 5px rgba(0, 0, 0, 0.3), inset 0 -5px 0 #fca311, inset 0 5px 0 #fca311;
       border-top: 5px solid #fca311;
       border-bottom: 5px solid #fca311;
@@ -51,13 +51,25 @@
       font-family: "Arial MT", "Times New Roman", serif;
     }
     .field .input {
-      width: 70%;
+      width: 100%;
       height: 23px;
       border-radius: 2px;
       background-color: #ffffff;
       border: 1px solid #14213d;
     }
     .field + .field{
+      margin-top: 10px;
+    }
+    .login .button {
+      width: 100%;
+      height: 30px;
+      border-radius: 8px;
+      font-size: 14px;
+      border: 1px solid #fca311;
+      background-color: #fca311;
+      background-image: linear-gradient(-245deg, rgba(255, 255, 255, 0.3) 0%, rgba(255, 255, 255, 0) 100%);
+    }
+    .field + .login {
       margin-top: 10px;
     }
   </style>
@@ -79,6 +91,11 @@
       <label class="label" for="passwordInput">password</label>
       <input class="input" type="text" id="passwordInput" name="password" autocomplete="on" required>
     </div>
+
+    <button class="login button" type="submit">Login</button>
+
+    <a href="#">Register</a>
+
 
   </form>
 </div>
