fixed small issues

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <body>
 <div class="container">
   <form class="popup login">
+
     <h1 class="heading">Welcome</h1>
 
     <div class="field">
@@ -25,7 +26,7 @@
     </div>
 
     <div class="field">
-      <button class="login button" type="submit">Login</button>
+      <button class="login button buttonAction" type="submit">Login</button>
     </div>
 
     <div class="field">
