--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
     <div class="field">
       <label class="label" for="passwordInput">password</label>
-      <input class="input" type="text" id="passwordInput" name="password" autocomplete="on" required>
+      <input class="input" type="password" id="passwordInput" name="password" autocomplete="on" required>
     </div>
 
     <div class="field">
