--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     </div>
 
     <div class="field">
-      <a href="#" class="link register">Register</a>
+      <a href="register.html" class="link register">Register</a>
     </div>
 
   </form>
