--- a/register.html
+++ b/register.html
@@ -4,7 +4,7 @@
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta charset="UTF-8">
-  <title>E-services for House Management - Login</title>
+  <title>E-services for House Management - Register</title>
   <link rel="stylesheet" type="text/css" href="css/style.css">
   <!-- <script src="/scripts/login.js"></script> -->
 </head>
@@ -36,13 +36,9 @@
       </div>
 
       <div class="field">
-        <button class="login2 buttonRegister buttonAction" type="submit">Register</button>
+        <button class="button buttonAction" type="button" onclick="window.location.href='index.html'">Register</button>
         <h3>Have an account? <a href="index.html">login</a></h3>
       </div>
-
-      
-    
-
     </form>
   </div>
 
