--- a/register.html
+++ b/register.html
@@ -37,7 +37,10 @@
 
       <div class="field">
         <button class="button buttonAction" type="button" onclick="window.location.href='index.html'">Register</button>
-        <h3>Have an account? <a href="index.html">login</a></h3>
+      </div>
+
+      <div class="field">  
+         <p class="fieldText">Have an account? <a href="index.html" class="link" >Login</a></p>
       </div>
     </form>
   </div>
