main menu properties page design

--- a/mainMenuProperties.html
+++ b/mainMenuProperties.html
@@ -7,26 +7,21 @@
   <link rel="stylesheet" href="css/menu.css">
 </head>
 <body>
+
 <div class="menuHeading">
   <div class="container left">
     <p>My awesome e-services</p>
   </div>
   <div class="container right">
-    <p><a href="" class="link">logout</a></p>
+    <p><a href="#" class="link">Logout</a></p>
   </div>
 </div>
 
-<div class="menu_simple">
-  <ul>
-    <li><a href="mainMenuProfile.html">Profile</a></li>
-    <li><a href="mainMenuProperties.html">Properties</a></li>
-    <li><a href="index.html">Logout</a></li>
-  </ul>
-</div>
-
-<div class="content">
-
-</div>
+<div class="menuHeading">
+  <div class="container left2">
+    <p>123</p>
+  </div>
+</div>  
 
 </body>
 </html>
