main menu properties design : in progress

--- a/mainMenuProperties.html
+++ b/mainMenuProperties.html
@@ -1,27 +1,96 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta charset="UTF-8">
-  <title>E-services for House Management - Properties </title>
-  <link rel="stylesheet" href="css/menu.css">
+  <title>E-services for House Management - main menu properties</title>
+
+  <style type="text/css">
+    body,
+    html {
+      height: 100%;
+      margin: 0;
+    }
+
+    aside {
+      background: #eeeeee;
+      width: 120px;
+      position: fixed;
+      height: 100%;
+      left: 0;
+      top: 0;
+    }
+
+    ul {
+      list-style: none;
+    }
+
+    section {
+      background: #eeeeee;
+      margin-top: 60px;
+      height: 100%;
+      padding-bottom:100px;
+      padding-top:50px;
+    }
+
+    header {
+      background: #eeeeee;
+      height: 60px;
+      position: fixed;
+      top: 0;
+      width: 100%;
+      left: 0;
+      text-align: center;
+      border-bottom: 5px solid #fca311;
+    }
+
+    .container {
+      text-align: center;
+      margin-left: 140px;
+      margin-top:80px;
+      width: 50%;
+      min-height: 100%;
+      position: relative;
+      left: 0;
+      padding-bottom:100px;
+    }
+
+    nav {
+      margin-top:100px;
+    }
+  </style>
 </head>
+
 <body>
-
-<div class="menuHeading">
-  <div class="container left">
-    <p>My awesome e-services</p>
+  <aside>
+    <nav>
+      <ul>
+        <li>Item 1</li>
+        <li>Item 2</li>
+        <li>Item 3</li>
+        <li>Item 4</li>
+        <li>Item 5</li>
+        <li>Item 6</li>
+      </ul>
+    </nav>
+  </aside>
+  <header>
+    <div style="width: 40%;float:left;padding-top: 20px;">my awesome webservices</div>
+    <div style="width: 60%; float:right;padding-top: 20px;">logout</div>
+  </header>
+  <div class="container">
+    <section>
+      <div>Text</div>
+      <div>Text</div>
+      <div>Text</div>
+      <div>Text</div>
+      <div>Text</div>
+      <div>Text</div>
+      <div>Text</div>
+      <div>Text</div>
+    </section>
   </div>
-  <div class="container right">
-    <p><a href="#" class="link">Logout</a></p>
-  </div>
-</div>
-
-<div class="menuHeading">
-  <div class="container left2">
-    <p>123</p>
-  </div>
-</div>  
-
 </body>
+
 </html>
