--- a/mainMenuProperties.html
+++ b/mainMenuProperties.html
@@ -7,91 +7,93 @@
   <title>E-services for House Management - main menu properties</title>
 
   <style type="text/css">
-    body,
+    * {
+      box-sizing: border-box;
+    }
     html {
-      margin: 0;
-    }
-
-    aside {
-      background: #eeeeee;
-      width: 120px;
-      position: fixed;
       height: 100%;
-      left: 0;
-      top: 0;
-      margin-top: 60px;
+      font-family: sans-serif;
     }
-
+    body {
+      height: 100%;
+      margin: 0;
+      display: flex;
+      overflow: hidden;
+    }
     ul {
       list-style: none;
+      display:block;
+      margin: 0;
+      padding: 0;
     }
-
-    .section {
-      background: #eeeeee;
-      
-      height: 100%;
-      padding-bottom:100px;
-      padding-top:50px;
-    }
-
     .header {
       background: #eeeeee;
-      height: 60px;
+      padding: 20px;
+      display: flex;
+      width:100%;
+      align-items: center;
+      justify-content: space-between;
       position: fixed;
-      top: 0;
-      width: 100%;
-      left: 0;
-      text-align: center;
       border-bottom: 5px solid #fca311;
       z-index:99;
+      padding-left: 100px;
     }
-
     .container {
-      text-align: center;
-      margin-left: 140px;
-      margin-top:80px;
-      width: 50%;
-      min-height: 100%;
-      position: relative;
-      left: 0;
-      padding-bottom:100px;
+      height: 100%;
+      display: flex;
+      padding-top:50px;
+      background-color: white;
     }
-
-    nav {
-      margin-top:100px;
+    .column {
+      height: 100%;
+      display: flex;
+      flex-direction: column;
+    }
+    .left {
+      flex-shrink: 0;
+      background-color: #eeeeee;
+    }
+    .right {
+      background-color: #eeeeee;
+      margin-top: 20px;
+      margin-left: 20px;
+      height: 60%;
+      width:50%;
+    }
+    .bottom {
+      flex-grow:1;
+      overflow-y:auto;
+      padding: 40px;
     }
   </style>
 </head>
 
 <body>
-  <aside>
-    <nav>
-      <ul>
-        <li>Item 1</li>
-        <li>Item 2</li>
-        <li>Item 3</li>
-        <li>Item 4</li>
-        <li>Item 5</li>
-        <li>Item 6</li>
-      </ul>
-    </nav>
-  </aside>
-  <div class="header">
-    <div style="width: 40%;float:left;padding-top: 20px;">my awesome webservices</div>
-    <div style="width: 60%; float:right;padding-top: 20px;">logout</div>
+ <div class="header">
+    <div class="top-right">my awesome webservices</div>
+    <div class="top-left">logout</div>
   </div>
   <div class="container">
-    <div class="section">
-      <div>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam ut ex fringilla, 
-        ornare orci quis, malesuada leo. Donec et tellus a justo pharetra egestas eu a mauris. Sed mauris mauris, lobortis quis porttitor eget, rhoncus nec lacus. Fusce at orci at urna laoreet ullamcorper. Maecenas ac ex vitae nisl interdum iaculis. Interdum et malesuada fames ac ante ipsum primis in faucibus. In nec mollis sapien. Nam sodales diam in lacus sodales, bibendum luctus dolor eleifend. Phasellus pulvinar libero id arcu dignissim, non rhoncus quam faucibus. Sed id nisi in enim hendrerit consequat. Aenean quis sem vulputate, accumsan enim eu, volutpat purus.
-         Etiam accumsan, nunc dictum condimentum sollicitudin, ligula odio consequat libero, fermentum fringilla lorem erat in mauris.
-         Sed molestie, massa non condimentum congue, mi ipsum laoreet sem, 
-        suscipit volutpat dolor nulla ac lacus. Donec tincidunt ligula neque, sed laoreet nulla dignissim nec. 
-        Aenean molestie egestas cursus. Morbi dignissim dui nec purus ultrices suscipit. Proin elit velit, scelerisque pretium orci id, 
-        sollicitudin tristique arcu. Sed vitae lectus eget velit ultrices bibendum. Proin a massa ut libero laoreet dignissim ut at nisi. 
-        Nunc sed tellus eget mauris pretium rutrum ut non tortor. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.</div>
+    <div class="column left">
+      <div class="bottom">
+        <ul>
+          <li>Item 1</li>
+          <li>Item 2</li>
+          <li>Item 3</li>
+          <li>Item 4</li>
+          <li>Item 5</li>
+          <li>Item 6</li>
+        </ul>
+      </div>
+    </div>
+    <div class="column right">
+      <div class="bottom"><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis quam massa, ornare at turpis quis, varius
+        pulvinar lorem. Morbi eleifend nisi eget viverra fermentum. Vivamus interdum dui quis orci placerat semper.
+        Morbi lobortis ex sit amet risus cursus pharetra. Interdum et malesuada fames ac ante ipsum primis in
+        faucibus. Etiam luctus leo augue, non facilisis nunc aliquam sed. Aliquam erat volutpat. Nam laoreet cursus
+        nunc, id tincidunt justo. Nullam elit magna, finibus at aliquam ut, blandit vel magna. Phasellus ullamcorper
+        urna a leo luctus vestibulum. Duis posuere leo ac lectus auctor, convallis aliquam odio gravida.</p></div>
     </div>
   </div>
 </body>
-
 </html>
