removed not needed class parameters

--- a/mainMenuProperties.html
+++ b/mainMenuProperties.html
@@ -20,8 +20,8 @@
       display: flex;
       overflow: hidden;
     }
-    ul {
-      list-style: none;
+    .menuLeftBar {
+      list-style: none; 
       display:block;
       margin: 0;
       padding: 0;
@@ -45,7 +45,6 @@
       background-color: white;
     }
     .column {
-      height: 100%;
       display: flex;
       flex-direction: column;
     }
@@ -76,7 +75,7 @@
   <div class="container">
     <div class="column left">
       <div class="bottom">
-        <ul>
+        <ul class="menuLeftBar">
           <li>Item 1</li>
           <li>Item 2</li>
           <li>Item 3</li>
