css changes in .header

--- a/mainMenuProperties.html
+++ b/mainMenuProperties.html
@@ -32,6 +32,9 @@
       width:100%;
       border-bottom: 5px solid #fca311;
       z-index:99;
+      display: flex;
+      flex-direction: row;
+      justify-content: space-between;
     }
     .container {
       height: 100%;
