--- a/mainMenuProperties.html
+++ b/mainMenuProperties.html
@@ -31,7 +31,6 @@
       padding: 20px;
       width:100%;
       border-bottom: 5px solid #fca311;
-      z-index:99;
       display: flex;
       flex-direction: row;
       justify-content: space-between;
@@ -41,7 +40,6 @@
       display: flex;
       background-color: white;
       width:100%;
-      z-index: 99;
     }
     .column {
       display: flex;
@@ -54,7 +52,6 @@
       background-color: #eeeeee;
       margin-top: 20px;
       margin-left: 20px;
-      height: 60%;
       width:50%;
     }
     .bottom {
@@ -63,8 +60,7 @@
     }
     .myStyle{
       display: flex;
-      flex-direction: row;
-      flex-wrap: wrap;
+      flex-direction: column;
     }
   </style>
 </head>
