--- a/test.1.html
+++ b/test.1.html
@@ -1,17 +1,19 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
 
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link href="https://www.cssscript.com/wp-includes/css/sticky.css" rel="stylesheet" type="text/css">
+  
   <title>Flexbox Based Navigation Demo</title>
   <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed" rel='stylesheet' type='text/css'>
   <style>
-    h1 { margin:150px auto 10px auto; text-align:center; color:#fff;}
-nav {
-  margin: 50px auto;
+    h1 {  
+      text-align:center; 
+      color:#fff;}
+    nav {
+      margin: 50px auto;
   max-width: 700px;
   width: 95%;
   font-family: 'Roboto Condensed', sans-serif;
@@ -125,8 +127,6 @@ body {
 </head>
 
 <body>
-  <div id="css-script-menu">
-  </div>
   <h1>Flexbox Based Navigation Demo</h1>
   <nav>
     <input type="checkbox" id="checkbox1" />
