--- a/mainMenuProperties.html
+++ b/mainMenuProperties.html
@@ -38,7 +38,7 @@
     .container {
       height: 100%;
       display: flex;
-      background-color: #eeeeee;
+      background-color: white;
       width:100%;
     }
     .column {
