--- a/mainMenuProperties.html
+++ b/mainMenuProperties.html
@@ -10,23 +10,20 @@
     * {
       box-sizing: border-box;
     }
-    html {
-      height: 100%;
-      font-family: sans-serif;
-    }
-    body {
+    html, body {
       height: 100%;
       margin: 0;
+      font-family: sans-serif;
       display: flex;
       overflow: hidden;
     }
-    .menuLeftBar {
+    .menuBar {
       list-style: none; 
       display:block;
       margin: 0;
       padding: 0;
     }
-    .header {
+    .mainStyle .header {
       background: #eeeeee;
       padding: 20px;
       width:100%;
@@ -35,13 +32,13 @@
       flex-direction: row;
       justify-content: space-between;
     }
-    .container {
+    .mainStyle .container {
       height: 100%;
       display: flex;
       background-color: white;
       width:100%;
     }
-    .column {
+    .container .column {
       display: flex;
       flex-direction: column;
     }
@@ -54,43 +51,33 @@
       margin-left: 20px;
       width:50%;
     }
-    .bottom {
+    .column .bottom {
       padding: 40px;
       overflow-y: auto;
     }
-    .myStyle{
+    .mainStyle{
       display: flex;
       flex-direction: column;
     }
 
     @media screen and (max-width:575px) {
-      .container {
+      .mainStyle .container {
         display: block;
       }
-      .header {
-        background: #eeeeee;
-        padding: 20px;
-        width:100%;
-        border-bottom: 5px solid #fca311;
+      .mainStyle .header {
         display: inline-block;
-      }
-      .column {
-        display: flex;
-        flex-direction: column;
       }
       .right {
         width:100%;
         margin: 0;
-        height: 100%;
-        
+        height: 80%;
       }
       .left {
         background-color: #eeeeee;
         align-items: center;
         border-bottom: 2px solid black;
-        
       }
-      .menuLeftBar {
+      .menuBar {
         list-style: none;
         display: flex;
         margin: 0;
@@ -98,23 +85,22 @@
         flex-direction: row;
         justify-content: space-around;
       }
-      .menuLeftBar li {
+      .menuBar li {
         padding-right: 15px;
       }
-      .bottom {
+      .column .bottom {
         padding: 20px;
-        overflow-y: auto;
       }
-      .top-right {
+      .header .top-right {
         font-size: 24px;
         display: block;
         float: left;
       }
-      .top-left{
+      .header .top-left{
         float: right;
         display: block;
       }
-      .space1 {
+      .menuBar .space1 {
         padding-right: 5px;
       }
     }
@@ -122,7 +108,7 @@
 </head>
 
 <body>
-<div class="myStyle">
+<div class="mainStyle">
   <div class="header">
     <div class="top-right">My Awesome Webservices</div>
     <div class="top-left">logout</div>  
@@ -130,7 +116,7 @@
   <div class="container">
     <div class="column left">
       <div class="bottom">
-        <ul class="menuLeftBar">
+        <ul class="menuBar">
           <li class="space1">Profile</li>
           <li>Properties</li>
         </ul>
