--- a/mainMenuProperties.html
+++ b/mainMenuProperties.html
@@ -42,10 +42,10 @@
       display: flex;
       flex-direction: column;
     }
-    .left {
+    .container .column_left {
       background-color: #eeeeee;
     }
-    .right {
+    .container .column_right {
       background-color: #eeeeee;
       margin-top: 20px;
       margin-left: 20px;
@@ -67,13 +67,12 @@
       .mainStyle .header {
         display: inline-block;
       }
-      .right {
+      .container .column_right {
         width:100%;
         margin: 0;
         height: 80%;
       }
-      .left {
-        background-color: #eeeeee;
+      .container .column_left {
         align-items: center;
         border-bottom: 2px solid black;
       }
@@ -114,7 +113,7 @@
     <div class="top-left">logout</div>  
   </div>
   <div class="container">
-    <div class="column left">
+    <div class="column column_left">
       <div class="bottom">
         <ul class="menuBar">
           <li class="space1">Profile</li>
@@ -122,7 +121,7 @@
         </ul>
       </div>
     </div>
-    <div class="column right">
+    <div class="column column_right">
       <div class="bottom"><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis quam massa, ornare at turpis quis, varius
         pulvinar lorem. Morbi eleifend nisi eget viverra fermentum. Vivamus interdum dui quis orci placerat semper.
         Morbi lobortis ex sit amet risus cursus pharetra. Interdum et malesuada fames ac ante ipsum primis in
