--- a/mainMenuProperties.html
+++ b/mainMenuProperties.html
@@ -111,11 +111,14 @@
   </div>
   <div class="container">
     <div class="column column_left">
-      <div class="bottom">
-        <ul class="menuBar">
-          <li class="space1">Profile</li>
-          <li>Properties</li>
-        </ul>
+      <div class="bottom menuBar">
+        <input type="checkbox" id="checkbox1" />
+          <label for="checkbox1">
+            <ul class="menuBar">
+              <li><a href="#">Profile</a></li>
+              <li><a href="#">Properties</a></li>
+            </ul>
+          </label>
       </div>
     </div>
     <div class="column column_right">
