--- a/mainMenuProperties.html
+++ b/mainMenuProperties.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -16,6 +17,10 @@
       font-family: sans-serif;
       display: flex;
       overflow: hidden;
+    }
+    #checkbox1,
+    .toggle {
+      display: none;
     }
     .menuBar {
       list-style: none; 
@@ -90,14 +95,70 @@
       .header .top-right {
         font-size: 24px;
         display: block;
-        float: left;
+        text-align: center;
       }
       .header .top-left{
         float: right;
-        display: block;
+        display: none;
       }
       .menuBar .space1 {
         padding-right: 5px;
+      }
+      .toggle {
+        clear: both;
+        display: block;
+        text-align: center;
+        font-size: 14px;
+        line-height: 40px;
+        cursor: pointer;
+        width: 100%;
+        height: 40px;
+        font-size: 18px;
+        color: #595959;
+        background: #dbdbdb;
+        border-bottom-left-radius: 5px;
+        border-bottom-right-radius: 5px;
+        transition: all .1s linear;
+      }
+      .toggle:hover {
+        background: #cecece;
+      }
+      #checkbox1:checked + label .demo li {
+        opacity: 1;
+        visibility: visible;
+        transition: all .7s linear;
+      }
+      #checkbox1:checked + label .demo {
+        height: 80px;
+      }
+      .menu {
+        border-radius: 0px;
+        border-top-left-radius: 5px;
+        border-top-right-radius: 5px;
+        background-color: lightgray;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+        align-items: center;
+        height: 0px;
+        transition: height .3s linear;
+      }
+      .menu li {
+        display: flex;
+        /* magic */
+        align-self: center;
+        width: 95%;
+        opacity: 0;
+        visibility: hidden;
+        background-color: lightgray;
+        padding: 5px;
+        margin: 1px;
+      }
+      .menu li a {
+        width: 95%;
+        text-align: center;
+        align-self: center;
+        align-content: center;
       }
     }
   </style>
@@ -114,10 +175,12 @@
       <div class="bottom menuBar">
         <input type="checkbox" id="checkbox1" />
           <label for="checkbox1">
-            <ul class="menuBar">
+            <ul class="menu demo menuBar">
               <li><a href="#">Profile</a></li>
               <li><a href="#">Properties</a></li>
+              <li><a href="#">Logout</a></li>
             </ul>
+            <span class="toggle">Menu</span>
           </label>
       </div>
     </div>
