--- a/mainMenuProperties.html
+++ b/mainMenuProperties.html
@@ -67,7 +67,8 @@
 
     @media screen and (max-width:575px) {
       .mainStyle .container {
-        display: block;
+        display: flex;
+        flex-direction: column;
       }
       .mainStyle .header {
         display: inline-block;
