--- a/mainMenuProperties.html
+++ b/mainMenuProperties.html
@@ -84,7 +84,7 @@
       }
       .menuBar {
         display: flex;
-        flex-direction: row;
+        flex-direction: column;
         justify-content: space-around;
       }
       .menuBar li {
