--- a/mainMenuProperties.html
+++ b/mainMenuProperties.html
@@ -43,14 +43,14 @@
       background-color: white;
       width:100%;
     }
-    .container .column {
+    .mainStyle .container .column {
       display: flex;
       flex-direction: column;
     }
-    .container .column_left {
+    .mainStyle .container .column_left {
       background-color: #eeeeee;
     }
-    .container .column_right {
+    .mainStyle .container .column_right {
       background-color: #eeeeee;
       margin-top: 20px;
       margin-left: 20px;
@@ -73,12 +73,12 @@
       .mainStyle .header {
         display: inline-block;
       }
-      .container .column_right {
+      .mainStyle .container .column_right {
         width:100%;
         margin: 0;
         height: 95%;
       }
-      .container .column_left {
+      .mainStyle .container .column_left {
         align-items: center;
         border-bottom: 2px solid black;
       }
@@ -93,12 +93,12 @@
       .column .bottom {
         padding: 20px;
       }
-      .header .top-right {
+      .mainStyle .header .top-right {
         font-size: 24px;
         display: block;
         text-align: center;
       }
-      .header .top-left{
+      .mainStyle .header .top-left{
         float: right;
         display: none;
       }
