--- a/mainMenuProperties.html
+++ b/mainMenuProperties.html
@@ -56,7 +56,7 @@
       margin-left: 20px;
       width:50%;
     }
-    .column .bottom {
+    .container .column .bottom {
       padding: 40px;
       overflow-y: auto;
     }
@@ -90,7 +90,7 @@
       .menuBar li {
         padding-right: 15px;
       }
-      .column .bottom {
+      .container .column .bottom {
         padding: 20px;
       }
       .mainStyle .header .top-right {
