--- a/register.html
+++ b/register.html
@@ -10,37 +10,37 @@
 </head>
 
 <body>
-  <div class="container">
-    <form class="popup login">
+  <div class="main-page-container">
+    <form class="input-form">
 
-      <h1 class="heading">Register Form</h1>
+      <h1 class="input-form__title input-form__title_big">Register Form</h1>
 
-      <div class="field">
-        <label class="label" for="loginInput">login</label>
-        <input class="input" type="text" id="loginInput" name="login" autocomplete="on" required>
+      <div class="input-form__field_common">
+        <label class="input-form__text-label">login
+        <input class="input-form__text-input" type="text" name="login" autocomplete="on" required></label>
       </div>
 
-      <div class="field">
-        <label class="label" for="passwordInput">password</label>
-        <input class="input" type="password" id="passwordInput" name="password" autocomplete="on" required>
+      <div class="input-form__field_common">
+        <label class="input-form__text-label">password
+        <input class="input-form__text-input" type="password" name="password" autocomplete="on" required></label>
       </div>
 
-      <div class="field">
-        <label class="label" for="passwordRepeatInput">repeat password</label>
-        <input class="input" type="password" id="passwordRepeatInput" name="passwordRepeat" autocomplete="on" required>
+      <div class="input-form__field_common">
+        <label class="input-form__text-label">repeat password
+        <input class="input-form__text-input" type="password" name="passwordRepeat" autocomplete="on" required></label>
       </div>
 
-      <div class="field">
-        <label class="label" for="name">name</label>
-        <input class="input" type="text" id="name" name="name" autocomplete="on" required>
+      <div class="input-form__field_common">
+        <label class="input-form__text-label">name
+        <input class="input-form__text-input" type="text" name="name" autocomplete="on" required></label>
       </div>
 
-      <div class="field">
-        <button class="button buttonAction" type="button" onclick="window.location.href='index.html'">Register</button>
+      <div class="input-form__field_common">
+        <button class="input-form__button input-form__button_orange" type="button" onclick="window.location.href='index.html'">Register</button>
       </div>
 
-      <div class="field">  
-         <p class="fieldText">Have an account? <a href="index.html" class="link" >Login</a></p>
+      <div class="input-form__field_common">  
+         <p class="input-form__fieldText">Have an account? <a href="index.html" class="input-form__link input-form__link_underlined" >Login</a></p>
       </div>
     </form>
   </div>
