--- a/mainMenuProperties.html
+++ b/mainMenuProperties.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 
@@ -64,6 +63,11 @@
       display: flex;
       flex-direction: column;
     }
+    .mainStyle .container .column_left .welcomeText {
+      color: red;
+      font-size: 18px;
+      text-align: center;
+    }
 
     @media screen and (max-width:575px) {
       .mainStyle .container {
@@ -109,7 +113,6 @@
         clear: both;
         display: block;
         text-align: center;
-        font-size: 14px;
         line-height: 40px;
         cursor: pointer;
         width: 100%;
@@ -133,7 +136,7 @@
         height: 100px;
       }
       .menu {
-        border-radius: 0px;
+        border-radius: 0;
         border-top-left-radius: 5px;
         border-top-right-radius: 5px;
         background-color: lightgray;
@@ -141,7 +144,7 @@
         flex-direction: column;
         justify-content: space-around;
         align-items: center;
-        height: 0px;
+        height: 0;
         transition: height .3s linear;
       }
       .menu li {
@@ -173,6 +176,9 @@
   <div class="container">
     <div class="column column_left">
       <div class="bottom menuBar">
+        <div class="welcomeText" >
+          <p>Welcome,<br>Lavrentijs</p>
+        </div>
           <label><input type="checkbox" class="checkbox1">
             <ul class="menu demo menuBar">
               <li><a href="#">Profile</a></li>
