--- a/register.html
+++ b/register.html
@@ -15,31 +15,31 @@
 
       <h1 class="input-form__title input-form__title_big">Register Form</h1>
 
-      <div class="input-form__field_common">
-        <label class="input-form__text-label">login
-        <input class="input-form__text-input" type="text" name="login" autocomplete="on" required></label>
-      </div>
+      <label class="input-form__field">
+        <span class="input-form__text-label">login</span>
+        <input class="input-form__text-input" type="text" name="login" autocomplete="on" required>
+      </label>
 
-      <div class="input-form__field_common">
-        <label class="input-form__text-label">password
-        <input class="input-form__text-input" type="password" name="password" autocomplete="on" required></label>
-      </div>
+      <label class="input-form__field">
+        <span class="input-form__text-label">password</span>
+        <input class="input-form__text-input" type="password" name="password" autocomplete="on" required>
+      </label>
 
-      <div class="input-form__field_common">
-        <label class="input-form__text-label">repeat password
-        <input class="input-form__text-input" type="password" name="passwordRepeat" autocomplete="on" required></label>
-      </div>
+      <label class="input-form__field">
+        <span class="input-form__text-label">repeat password</span>
+        <input class="input-form__text-input" type="password" name="passwordRepeat" autocomplete="on" required>
+      </label>
 
-      <div class="input-form__field_common">
-        <label class="input-form__text-label">name
-        <input class="input-form__text-input" type="text" name="name" autocomplete="on" required></label>
-      </div>
+      <label class="input-form__field">
+        <span class="input-form__text-label">name</span>
+        <input class="input-form__text-input" type="text" name="name" autocomplete="on" required>
+      </label>
 
-      <div class="input-form__field_common">
+      <div class="input-form__field">
         <button class="input-form__button input-form__button_orange" type="button" onclick="window.location.href='index.html'">Register</button>
       </div>
 
-      <div class="input-form__field_common">  
+      <div class="input-form__field">  
          <p class="input-form__fieldText">Have an account? <a href="index.html" class="input-form__link input-form__link_underlined" >Login</a></p>
       </div>
     </form>
