--- a/mainMenuPropertiesNewDesign.html
+++ b/mainMenuPropertiesNewDesign.html
@@ -8,9 +8,25 @@
       font-family: 'Lato', sans-serif;
     }
 
-    .header {
-      display: inline-block;
-      text-align: right;
+    .mainStyle {
+      display: flex;
+      flex-direction: column;
+    }
+
+    .parent {
+      display: flex;
+      flex-direction: row;
+    }
+
+    narrow {
+      width: 15%;
+      display: none;
+    }
+
+    .wide {
+      flex: 1;
+      text-align: center;
+      font-size: 20px;
     }
 
     .overlay {
@@ -60,7 +76,6 @@
 
     }
 
-
     @media screen and (max-height: 450px) {
       .overlay a {
         font-size: 20px
@@ -72,46 +87,58 @@
         right: 35px;
       }
 
-      .header {
-        display: inline-block;
-      }
-
       .top-right {
         font-size: 24px;
         text-align: center;
       }
 
+      .parent {
+        display: flex;
+      }
+
+      narrow {
+        width: 10%;
+      }
+
+      .wide {
+        flex: 1;
+        text-align: center;
+        font-size: 20px;
+      }
     }
   </style>
 </head>
 
 <body>
+  <div class="mainStyle">
+    <div class="parent">
+      <div class="narrow">
+        <div id="myNav" class="overlay">
+          <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+          <div class="overlay-content">
+            <a href="#">About</a>
+            <a href="#">Services</a>
+            <a href="#">Clients</a>
+            <a href="#">Contact</a>
+          </div>
+        </div>
 
-  <div>
-    <div id="myNav" class="overlay">
-      <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-      <div class="overlay-content">
-        <a href="#">About</a>
-        <a href="#">Services</a>
-        <a href="#">Clients</a>
-        <a href="#">Contact</a>
+        <span style="font-size:25px;cursor:pointer" onclick="openNav()">&#9776; </span>
+
+        <script>
+          function openNav() {
+            document.getElementById("myNav").style.width = "100%";
+          }
+          function closeNav() {
+            document.getElementById("myNav").style.width = "0%";
+          }
+        </script>
+      </div>
+      <div class="wide">
+        <span style="font-size:25px">My Awesome Webservices</span>
       </div>
     </div>
-
-    <span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776; </span>
-
-    <script>
-      function openNav() {
-        document.getElementById("myNav").style.width = "100%";
-      }
-
-      function closeNav() {
-        document.getElementById("myNav").style.width = "0%";
-      }
-    </script>
-    <div class="header">
-      <p>My Awesome Webservices</p>
-    </div>
+  </div>
   </div>
 </body>
 
