new design in progress : small changes

--- a/mainMenuProperties2.html
+++ b/mainMenuProperties2.html
@@ -135,7 +135,8 @@
       }
 
       .container .column .bottom {
-        padding: 20px;
+        padding: 0;
+        overflow-y: unset;
       }
 
       .mainStyle .header .top-right {
